Fix #828: div id# completionprogressid has z-index.

--- a/less/essential/fixes.less
+++ b/less/essential/fixes.less
@@ -22,11 +22,6 @@ a[name="lastused"] {
     height: 35px;
 }
 
-// Fix for over enthusiastic z-index on progress label
-.course-content #completionprogressid {
-    z-index: 10;
-}
-
 // Solve overflowing table issue: https://moodle.org/mod/forum/discuss.php?d=279883 - related to: https://moodle.org/mod/forum/discuss.php?d=274915 - which might be too - code comes from: https://github.com/gjb2048/moodle-theme_shoehorn/issues/5
 table {
     th,
