--- a/style/essential.css
+++ b/style/essential.css
@@ -23283,9 +23283,6 @@ a[name="lastused"] {
 .path-mod-feedback .generalbox div table tbody img {
   height: 35px;
 }
-.course-content #completionprogressid {
-  z-index: 10;
-}
 table th,
 table td {
   word-wrap: break-word;
